tests/snapshots/arrange__arranges_the_storefront_architecture_without_denting_a_row-2.snap
---
source: tests/arrange.rs
expression: result.svg.as_str()
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1470 700" width="1470" height="700">

  <style>
    text { font-family: system-ui, sans-serif; fill: #1f2937; }
    .title { font-size: 20px; font-weight: 700; }
    .caption { font-size: 12px; fill: #6b7280; }
    .container &gt; rect { fill: #f8fafc; stroke: #94a3b8; stroke-dasharray: 6 4; }
    .container &gt; text { font-size: 13px; font-weight: 600; fill: #475569; }
    .actor circle { fill: #fef3c7; stroke: #b45309; stroke-width: 1.5; }
    .client rect { fill: #e0f2fe; stroke: #0369a1; }
    .edge rect { fill: #ede9fe; stroke: #6d28d9; }
    .service rect { fill: #dcfce7; stroke: #15803d; }
    .store rect { fill: #ffedd5; stroke: #c2410c; }
    .external rect { fill: #f1f5f9; stroke: #334155; stroke-width: 2; }
    .process circle { fill: #dbeafe; stroke: #1d4ed8; stroke-width: 1.5; }
    .entity rect { fill: #fef3c7; stroke: #92400e; stroke-width: 2; }
    .datastore rect { fill: #f0fdf4; stroke: #166534; }
    .flow { stroke: #475569; stroke-width: 1.4; marker-end: url(#arrow); }
    .flow-label { font-size: 11px; fill: #334155; font-style: italic; }
  </style>
  <defs>
    <marker id="arrow" viewBox="0 0 10 10" refX="10" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse">
      <path d="M 0 0 L 10 5 L 0 10 z" fill="#475569"/>
    </marker>
  </defs>
  <rect x="0" y="0" width="100%" height="100%" fill="#ffffff"/>
  <text data-label="title" class="title" x="24" y="40" font-size="20">Storefront platform — system architecture</text>
  <text data-label="caption" class="caption" x="24" y="62" font-size="12">Clients, edge, services on Kubernetes, managed data stores and external providers</text>
  <g data-node="customer" class="actor" transform="translate(0 -12)">
    <circle cx="70" cy="170" r="44"/>
    <text x="70" y="175" text-anchor="middle" font-size="13">Customer</text>
  </g>
  <g data-node="staff" class="actor">
    <circle cx="70" cy="400" r="48"/>
    <text x="70" y="405" text-anchor="middle" font-size="13">Ops staff</text>
  </g>
  <g data-node="web" class="client">
    <rect x="148.5" y="110" width="131" height="48" rx="6"/>
    <text x="214" y="139" text-anchor="middle" font-size="13">Web storefront</text>
  </g>
  <g data-node="mobile" class="client" transform="translate(0 40)">
    <rect x="150" y="220" width="128" height="48" rx="6"/>
    <text x="214" y="249" text-anchor="middle" font-size="13">Mobile app</text>
  </g>
  <g data-node="admin" class="client">
    <rect x="150" y="376" width="128" height="48" rx="6"/>
    <text x="214" y="405" text-anchor="middle" font-size="13">Admin console</text>
  </g>
  <g data-node="cdn" class="edge">
    <rect x="340" y="110" width="128" height="48" rx="6"/>
    <text x="404" y="139" text-anchor="middle" font-size="13">CDN</text>
  </g>
  <g data-node="gateway" class="edge">
    <rect x="340" y="270" width="128" height="48" rx="6"/>
    <text x="404" y="299" text-anchor="middle" font-size="13">API gateway</text>
  </g>
  <g data-node="cluster" class="container">
    <rect x="540" y="76" width="640" height="434" rx="10"/>
    <text x="556" y="104">Kubernetes cluster (EKS)</text>
    <g data-node="auth" class="service">
      <rect x="580" y="130" width="128" height="48" rx="6"/>
      <text x="644" y="159" text-anchor="middle" font-size="13">Auth service</text>
    </g>
    <g data-node="catalog" class="service">
      <rect x="794.5" y="130" width="139" height="48" rx="6"/>
      <text x="864" y="159" text-anchor="middle" font-size="13">Catalog service</text>
    </g>
    <g data-node="cart" class="service">
      <rect x="1020" y="130" width="128" height="48" rx="6"/>
      <text x="1084" y="159" text-anchor="middle" font-size="13">Cart service</text>
    </g>
    <g data-node="order" class="service" transform="translate(40 0)">
      <rect x="580" y="290" width="128" height="48" rx="6"/>
      <text x="644" y="319" text-anchor="middle" font-size="13">Order service</text>
    </g>
    <g data-node="payment" class="service">
      <rect x="794.5" y="290" width="139" height="48" rx="6"/>
      <text x="864" y="319" text-anchor="middle" font-size="13">Payment service</text>
    </g>
    <g data-node="inventory" class="service" transform="translate(0 -57)">
      <rect x="1007" y="290" width="154" height="48" rx="6"/>
      <text x="1084" y="319" text-anchor="middle" font-size="13">Inventory service</text>
    </g>
    <g data-node="notify" class="service">
      <rect x="779" y="430" width="170" height="48" rx="6"/>
      <text x="864" y="459" text-anchor="middle" font-size="13">Notification worker</text>
    </g>
  </g>
  <g data-node="data" class="container">
    <rect x="540" y="546" width="680" height="114" rx="10"/>
    <text x="556" y="574">Managed data stores</text>
    <g data-node="postgres" class="store" transform="translate(-20 0)">
      <rect x="580" y="600" width="128" height="48" rx="6"/>
      <text x="644" y="629" text-anchor="middle" font-size="13">PostgreSQL</text>
    </g>
    <g data-node="kafka" class="store">
      <rect x="760" y="600" width="110" height="48" rx="6"/>
      <text x="815" y="629" text-anchor="middle" font-size="13">Kafka</text>
    </g>
    <g data-node="search" class="store">
      <rect x="910" y="600" width="120" height="48" rx="6"/>
      <text x="970" y="629" text-anchor="middle" font-size="13">OpenSearch</text>
    </g>
    <g data-node="redis" class="store">
      <rect x="1070" y="600" width="110" height="48" rx="6"/>
      <text x="1125" y="629" text-anchor="middle" font-size="13">Redis</text>
    </g>
  </g>
  <g data-node="idp" class="external">
    <rect x="1283" y="130" width="154" height="48" rx="6"/>
    <text x="1360" y="159" text-anchor="middle" font-size="13">Identity provider</text>
  </g>
  <g data-node="psp" class="external">
    <rect x="1286.5" y="290" width="147" height="48" rx="6"/>
    <text x="1360" y="319" text-anchor="middle" font-size="13">Payment provider</text>
  </g>
  <g data-node="mail" class="external">
    <rect x="1290" y="430" width="140" height="48" rx="6"/>
    <text x="1360" y="459" text-anchor="middle" font-size="13">Email delivery</text>
  </g>
  <path id="f1" class="flow" data-from="customer" data-to="web" fill="none" d="M 107 134 L 148.5 134"/>
  <path id="f2" class="flow" data-from="customer" data-to="mobile" fill="none" d="M 70 202 L 70 284 L 150 284"/>
  <path id="f3" class="flow" data-from="staff" data-to="admin" fill="none" d="M 118 400 L 150 400"/>
  <path id="f4" class="flow" data-from="web" data-to="cdn" fill="none" d="M 279.5 134 L 340 134"/>
  <path id="f5" class="flow" data-from="mobile" data-to="gateway" fill="none" d="M 278 284 L 340 284"/>
  <path id="f6" class="flow" data-from="cdn" data-to="gateway" fill="none" d="M 372 158 L 372 270"/>
  <path id="f7" class="flow" data-from="admin" data-to="gateway" fill="none" d="M 278 400 L 404 400 L 404 318"/>
  <path id="f8" class="flow" data-from="gateway" data-to="auth" fill="none" d="M 468 286 L 520 286 L 520 154 L 580 154"/>
  <path id="f9" class="flow" data-from="gateway" data-to="catalog" fill="none" d="M 404 270 L 404 202 L 841 202 L 841 178"/>
  <path id="f10" class="flow" data-from="gateway" data-to="cart" fill="none" d="M 436 270 L 436 222 L 1084 222 L 1084 178"/>
  <path id="f11" class="flow" data-from="gateway" data-to="order" fill="none" d="M 468 302 L 620 302"/>
  <path id="f12" class="flow" data-from="auth" data-to="idp" fill="none" d="M 644 130 L 644 106 L 1360 106 L 1360 130"/>
  <path id="f13" class="flow" data-from="catalog" data-to="search" fill="none" d="M 933.5 154 L 970 154 L 970 600"/>
  <path id="f14" class="flow" data-from="catalog" data-to="postgres" fill="none" d="M 887 178 L 887 233 L 592 233 L 592 600"/>
  <path id="f15" class="flow" data-from="cart" data-to="redis" fill="none" d="M 1148 154 L 1200 154 L 1200 624 L 1180 624"/>
  <path id="f16" class="flow" data-from="order" data-to="postgres" fill="none" d="M 663 338 L 663 600"/>
  <path id="f17" class="flow" data-from="order" data-to="payment" fill="none" d="M 748 314 L 794.5 314"/>
  <path id="f18" class="flow" data-from="order" data-to="inventory" fill="none" d="M 684 290 L 684 257 L 1007 257"/>
  <path id="f19" class="flow" data-from="order" data-to="kafka" fill="none" d="M 705 338 L 705 624 L 760 624"/>
  <path id="f20" class="flow" data-from="payment" data-to="psp" fill="none" d="M 933.5 314 L 1286.5 314"/>
  <path id="f21" class="flow" data-from="inventory" data-to="postgres" fill="none" d="M 1084 281 L 1084 420 L 624 420 L 624 600"/>
  <path id="f22" class="flow" data-from="kafka" data-to="notify" fill="none" d="M 815 600 L 815 478"/>
  <path id="f23" class="flow" data-from="notify" data-to="mail" fill="none" d="M 949 454 L 1290 454"/>
  <text data-label="f4-label" data-label-for="f4" class="flow-label" x="310" y="123" text-anchor="middle" font-size="11">HTTPS</text>
  <text data-label="f5-label" data-label-for="f5" class="flow-label" x="309" y="273" text-anchor="middle" font-size="11">HTTPS</text>
  <text data-label="f6-label" data-label-for="f6" class="flow-label" x="363" y="219" text-anchor="end" font-size="11">API calls</text>
  <text data-label="f7-label" data-label-for="f7" class="flow-label" x="341" y="389" text-anchor="middle" font-size="11">HTTPS</text>
  <text data-label="f8-label" data-label-for="f8" class="flow-label" x="511" y="179" text-anchor="end" font-size="11">token check</text>
  <text data-label="f9-label" data-label-for="f9" class="flow-label" x="732" y="191" text-anchor="middle" font-size="11">REST</text>
  <text data-label="f10-label" data-label-for="f10" class="flow-label" x="1019" y="211" text-anchor="middle" font-size="11">REST</text>
  <text data-label="f11-label" data-label-for="f11" class="flow-label" x="521" y="322" text-anchor="middle" font-size="11">REST</text>
  <text data-label="f12-label" data-label-for="f12" class="flow-label" x="1002" y="95" text-anchor="middle" font-size="11">OIDC</text>
  <text data-label="f13-label" data-label-for="f13" class="flow-label" x="979" y="538" text-anchor="start" font-size="11">queries</text>
  <text data-label="f15-label" data-label-for="f15" class="flow-label" x="1209" y="535" text-anchor="start" font-size="11">sessions</text>
  <text data-label="f16-label" data-label-for="f16" class="flow-label" x="654" y="382" text-anchor="end" font-size="11">SQL</text>
  <text data-label="f17-label" data-label-for="f17" class="flow-label" x="771" y="303" text-anchor="middle" font-size="11">gRPC</text>
  <text data-label="f18-label" data-label-for="f18" class="flow-label" x="829" y="277" text-anchor="middle" font-size="11">gRPC</text>
  <text data-label="f19-label" data-label-for="f19" class="flow-label" x="714" y="529" text-anchor="start" font-size="11">order events</text>
  <text data-label="f20-label" data-label-for="f20" class="flow-label" x="1145" y="303" text-anchor="middle" font-size="11">charges</text>
  <text data-label="f22-label" data-label-for="f22" class="flow-label" x="824" y="538" text-anchor="start" font-size="11">consume</text>
  <text data-label="f23-label" data-label-for="f23" class="flow-label" x="1085" y="474" text-anchor="middle" font-size="11">send</text>
</svg>
