tests/snapshots/arrange__arranges_the_storefront_architecture_without_denting_a_row.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 23,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 22.85,
  "remainingIssues": 0
}
