tests/snapshots/arrange__keeps_a_moved_node_off_its_container_s_title_and_border.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": -0.0,
  "remainingIssues": 0
}
