tests/snapshots/arrange__moves_a_node_out_of_a_connector_s_way_breaking_only_a_weak_alignment.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": -0.0,
  "remainingIssues": 0
}
