tests/snapshots/arrange__treats_an_alignment_whose_connector_detours_as_weak.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 1.84,
  "remainingIssues": 0
}
