tests/snapshots/arrange__untangles_crossing_connectors.snap
---
source: tests/arrange.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": -0.0,
  "remainingIssues": 0
}
